fix: change z-index

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -5,9 +5,10 @@
   flex-direction: row;
   align-items: center;
 
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
 
   &__nav {
     $navigation-size: 290px;
